--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   "license": "ISC",
   "devDependencies": {
     "@types/aws-lambda": "^8.10.150",
+    "@types/node": "^24.0.10",
     "typescript": "^5.8.3"
   },
   "dependencies": {
     "@aws-sdk/client-cognito-identity-provider": "^3.840.0",
     "@aws-sdk/client-dynamodb": "^3.839.0",
     "@aws-sdk/lib-dynamodb": "^3.839.0",
+    "@speechmatics/batch-client": "^5.0.1",
     "aws-lambda": "^1.0.7",
     "uuid": "^11.1.0",
     "zod": "^3.25.67"
